# TensorRT

./: CUDA.props  GStreamer.props  README.md  TensorRT.cmake  TensorRT.props  TensorRT.sln  opencv_static.props
Retinanet/: Retinanet.vcxproj  Retinanet.vcxproj.filters  Retinanet_resnet50_fpn.cpp  Retinanet_resnet50_fpn.h  main.cpp
Vitis-AI/: Vitis-AI.vcxproj  Vitis-AI.vcxproj.filters  YOLOv8.cpp  YOLOv8.h  main.cpp
WideResNet/: Evaluate.py  WideResNet50.py  WideResNet50_2.ipynb  WideResNet50_2.py  WideResNet50_modify.py  WideResnet50_2入力サイズ評価.xlsx  categories.txt  variable_inputsize.py
YOLOX/: CMakeLists.txt  YOLOX.cpp  YOLOX.h  YOLOX.vcxproj  YOLOX.vcxproj.filters  main.cpp
YOLOv8/: CMakeLists.txt  Segmentation.py  YOLOv8.cpp  YOLOv8.h  YOLOv8.vcxproj  YOLOv8.vcxproj.filters  main.cpp
YOLOv9/: CMakeLists.txt  YOLOv9.cpp  YOLOv9.hpp  main.cpp
YOLOv9_Gender/: YOLOv9Gender.cpp  YOLOv9Gender.h  YOLOv9_Gender.vcxproj  YOLOv9_Gender.vcxproj.filters  main.cpp
demo/: CMakeLists.txt  demo.cpp  demo.vcxproj  demo.vcxproj.filters
images/: E-_G_8QVcAQwHI6.jfif  E_HgtaGUUAAMsXx.jfif  E_pG2O9VcAAVqll.jfif  E_pO-TcVkAEwROz.jfif
include/: 80categories.h  Object.h  TensorRT.h  YOLOX.h  logging.h
models/: yolov8s_nms_config.json
src/: TensorRT.cpp  TensorRT.vcxproj  TensorRT.vcxproj.filters  YOLOX.cpp
ultralytics/: inference.cpp  main.cpp  ultralytics.vcxproj  ultralytics.vcxproj.filters
